fix(index-style): adjust header width and positioning for better alignment

--- a/static/index.css
+++ b/static/index.css
@@ -19,13 +19,19 @@ body{
 header{
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(5px);
-    width: 100%;
+
+    width: 90%;
+    max-width: 900px;
     height: 4rem;
+
     position: fixed;
     top: 0;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
+
     border-radius: 0 0 15px 15px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.459);
+
     display: flex;
     align-items: center;
     justify-content: space-between;
